Update ember-cli to v2.15.0-beta.2

--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -10,8 +10,8 @@
 
     {{content-for "head"}}
 
-    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/skylines.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
+    <link integrity="" rel="stylesheet" href="{{rootURL}}assets/skylines.css">
 
     {{content-for "head-footer"}}
   </head>
