Use ember-web-app to handle favicons and web app manifest

--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel='shortcut icon' href='/favicon.ico' type='image/x-icon' />
-    <link rel='shortcut' href='/favicon.png' type='image/png' />
-
     {{content-for "head"}}
 
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link integrity="" rel="stylesheet" href="{{rootURL}}assets/skylines.css">
+
+    <link rel="icon" type="image/png" sizes="32x32" href="{{rootURL}}favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{rootURL}}favicon-16x16.png">
+    <link rel="mask-icon" href="{{rootURL}}safari-pinned-tab.svg?v=Km2zX7mBpP" color="#008eda">
+    <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
 
     {{content-for "head-footer"}}
   </head>
