--- a/ember/app/index.html
+++ b/ember/app/index.html
@@ -15,6 +15,8 @@
     <link rel="mask-icon" href="{{rootURL}}safari-pinned-tab.svg?v=Km2zX7mBpP" color="#008eda">
     <link rel="shortcut icon" href="{{rootURL}}favicon.ico">
 
+    <title>SkyLines</title>
+
     {{content-for "head-footer"}}
   </head>
   <body>
